WIP, AT/AW needs fixing, switch expressions need removing, some deps need downgrading.